--- a/public/index.html
+++ b/public/index.html
@@ -1800,7 +1800,7 @@ font-size: 13px;
     </div>
     <nav>
         <a href="index.html">Home</a>
-        <a href="#ourservices">Services</a>
+        <a href=" ">Services</a>
         <a href="chartbot.html">Help Desk</a>
         <a href="#">Contact</a>
         <a href="aboutus.html">About Us</a>
@@ -2302,6 +2302,9 @@ document.addEventListener('DOMContentLoaded', () => {
             alert("Please select an industry first!");
         }
     }
+
+    
+
     </script>
     
 </body>
