--- a/public/index.html
+++ b/public/index.html
@@ -115,11 +115,11 @@
     }
 
     .hero h1 {
-      font-size: 5em;
+      font-size: 4em;
       margin-bottom: 20px;
       animation: fadeIn 2s ease-in-out;
       margin-left: 10%;
-      margin-right: 5%;
+      margin-right: 2%;
     }
 
     .hero p {
@@ -2052,9 +2052,9 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="#left-panel">Services</a>
-      <a href="chartbot.html">Help Desk</a>
+      <a href="CHARTBOT/chartbot.html">Help Desk</a>
       <a href="#">Contact</a>
-      <a href="aboutus.html">About Us</a>
+      <a href="ABOUTUS/aboutus.html">About Us</a>
     </nav>
   </header>
 
