--- a/public/APPLYFORM/application.html
+++ b/public/APPLYFORM/application.html
@@ -27,7 +27,7 @@
             <img src="https://assets.onecompiler.app/42y68y97m/43a86mbvc/submit_success.png" alt="Success">
             <p> Your submission was received :)</p>
             <span>Thanks for the message</span>
-            <a href="index.html" onclick="hidePopup()">Back To Home</a>
+            <a href="../index.html" onclick="hidePopup()">Back To Home</a>
         </div>
     </div>
 
