--- a/public/APPLYFORM/application.html
+++ b/public/APPLYFORM/application.html
@@ -7,10 +7,18 @@
     <title>Application Form</title>
     <link rel="stylesheet" href="application.css">
 </head>
-
+ 
 <body>
+ <!-- Centered Logo at the Top -->
+ <header class="logo">
+    <div class="logo-container">
+        <a href="../index.html"> 
+        <img src="https://assets.onecompiler.app/42y68y97m/4359nzr9t/file.png" alt="Company Logo">
+        </a>
+    </div>
+</header>
     <div class="container">
-        <h2 id="formTitle">Application Form</h2>
+         <h2 id="formTitle">Application Form</h2>
         <form id="your-form">
             <input type="hidden" id="industryInput" name="industry">
             <input type="text" id="name" name="name" placeholder="Full Name" required>
