--- a/public/CHARTBOT/chartbot.html
+++ b/public/CHARTBOT/chartbot.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="chatbot-container">
-        <div class="chat-header">VSpaze Chatbot</div>
+        <div class="chat-header">Vspaze Chatbot</div>
         <div class="chat-body" id="chatBody"></div>
         <div class="chat-input">
             <input type="text" id="userInput" placeholder="Type your message here...">
