--- a/public/ABOUTUS/aboutus.html
+++ b/public/ABOUTUS/aboutus.html
@@ -12,9 +12,11 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="https://assets.onecompiler.app/42y68y97m/4359nzr9t/file.png" alt="Logo" />
-        </div>
+       <div class="logo">
+  <a href="../index.html">
+    <img src="https://assets.onecompiler.app/42y68y97m/4359nzr9t/file.png" alt="Logo" />
+  </a>
+</div>
         <nav>
             <a href="../index.html">Home</a>
            
