--- a/public/CONTACTUS/contactus.html
+++ b/public/CONTACTUS/contactus.html
@@ -11,9 +11,11 @@
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="https://assets.onecompiler.app/42y68y97m/4359nzr9t/file.png" alt="Logo" />
-        </div>
+       <div class="logo">
+  <a href="../index.html">
+    <img src="https://assets.onecompiler.app/42y68y97m/4359nzr9t/file.png" alt="Logo" />
+  </a>
+</div>
         <nav>
             <a href="../index.html">Home</a>
             
@@ -35,7 +37,7 @@
             <div class="card">
                 <i class="fas fa-map-marker-alt"></i>
                 <h3>Location</h3>
-                <p> Jadcherla, Mahabubnager, TG.</p>
+                <p>Hyderabad, Telangana, India</p>
             </div>
             <div class="card">
                 <a href="tel:+919908581431">
