--- a/public/index.html
+++ b/public/index.html
@@ -2047,8 +2047,11 @@
 <body>
   <header>
     <div class="logo">
-      <img src="https://assets.onecompiler.app/42y68y97m/4359nzr9t/file.png" alt="Logo" />
-    </div>
+  <a href="index.html">
+    <img src="https://assets.onecompiler.app/42y68y97m/4359nzr9t/file.png" alt="Logo" />
+  </a>
+</div>
+
     <nav>
       <a href="index.html">Home</a>
        
