--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
       height: 150px;
       width: 100px;
       border-radius: 50%;
-      margin-top: 2%;
+      margin-top: 15px;
     }
 
     header nav {
@@ -1273,6 +1273,7 @@
       header .logo {
         display: flex;
         align-items: center;
+          
       }
 
       header .logo img {
@@ -1281,7 +1282,7 @@
         height: 70px;
         width: 70px;
         border-radius: 50%;
-        margin-top: 3%;
+        
       }
 
       header nav {
