--- a/public/ABOUTUS/aboutus.html
+++ b/public/ABOUTUS/aboutus.html
@@ -14,7 +14,7 @@
     <header>
        <div class="logo">
   <a href="../index.html">
-    <img src="https://assets.onecompiler.app/42y68y97m/4359nzr9t/file.png" alt="Logo" />
+    <img src="../vspazelogo.png" alt="Logo" />
   </a>
 </div>
         <nav>
@@ -22,7 +22,8 @@
            
             <a href="../CHARTBOT/chartbot.html">Help Desk</a>
             <a href="../CONTACTUS/contactus.html">Contact Us</a>
-            <a href="#">About Us</a>
+            <a href="aboutus.html" class="active">About Us</a>
+
         </nav>
 
     </header>
@@ -33,13 +34,13 @@
             tailored to your business needs. As a startup, we strive to establish ourselves by offering exceptional
             services at reasonable prices.</p>
         <div class="image-grid">
-            <img src="	https://assets.onecompiler.app/42y68y97m/4399f8efc/BrightEdge%20Acquires%20Oncrawl%20To%20Help%20SEOs%20Do%20More%20Wth%20Data%20Science%20via%20@sejournal,%20@MattGSouthern.jpeg"
+            <img src="about2.jpeg"
                 alt="Image 1" class="big">
-            <img src="https://assets.onecompiler.app/42y68y97m/4399f8efc/Ready%20to%20implement%20AI_.jpeg"
+            <img src="about3 (1).jpeg"
                 alt="Image 2" class="small">
-            <img src="	https://assets.onecompiler.app/42y68y97m/4399f8efc/Fun%20Accounting%20Jobs_%20You%20Bet!%20Here%20Are%20Some%20of%20the%20Best.jpeg"
+            <img src="about3 (2).jpeg"
                 alt="Image 3" class="big">
-            <img src="	https://assets.onecompiler.app/42y68y97m/4399f8efc/Whether%20you're%20a%20content%20creator,%20marketer,%20or%20entrepreneur,%20Craftty_ai%20is%20here%20to%20transform%20your%20id.jpeg"
+            <img src="about3 (3).jpeg"
                 alt="Image 4" class="small">
 
         </div>
@@ -53,7 +54,7 @@
     </section>
 
     <section class="founder">
-        <img src="https://assets.onecompiler.app/42y68y97m/438gjwd5k/Easily%20automate%20your%20business%20processes%20with%20AI.jpeg"
+        <img src="aboutimg1.jpeg"
             alt="Founder Image">
         <blockquote>"Making an impact, together"</blockquote>
     </section>
@@ -82,7 +83,7 @@
     </section>
     <div class="footer">
         <div class="logo">
-            <img src="https://assets.onecompiler.app/42y68y97m/433zxpj73/WhatsApp%20Image%202024-12-25%20at%2012.45.50%20AM.jpeg"
+            <img src="../vspazelogo.png"
                 alt="Logo" class="logo-img">
             <span class="company-name">VSPAZE TECHNOLOGIES</span>
         </div>
