--- a/public/APPLYFORM/application.html
+++ b/public/APPLYFORM/application.html
@@ -13,7 +13,7 @@
  <header class="logo">
     <div class="logo-container">
         <a href="../index.html"> 
-        <img src="https://assets.onecompiler.app/42y68y97m/4359nzr9t/file.png" alt="Company Logo">
+        <img src="../vspazelogo.png" alt="Company Logo">
         </a>
     </div>
 </header>
@@ -32,7 +32,7 @@
 
     <div class="popup-overlay" id="popup-overlay">
         <div class="popup">
-            <img src="https://assets.onecompiler.app/42y68y97m/43a86mbvc/submit_success.png" alt="Success">
+            <img src="successimg.png" alt="Success">
             <p> Your submission was received :)</p>
             <span>Thanks for the message</span>
             <a href="../index.html" onclick="hidePopup()">Back To Home</a>
