--- a/public/CONTACTUS/contactus.html
+++ b/public/CONTACTUS/contactus.html
@@ -13,14 +13,14 @@
     <header>
        <div class="logo">
   <a href="../index.html">
-    <img src="https://assets.onecompiler.app/42y68y97m/4359nzr9t/file.png" alt="Logo" />
+    <img src="../vspazelogo.png" alt="Logo" />
   </a>
 </div>
         <nav>
             <a href="../index.html">Home</a>
             
             <a href="../CHARTBOT/chartbot.html">Help Desk</a>
-            <a href="contactus.html">Contact Us</a>
+            <a href="contactus.html" class="active">Contact Us</a>
             <a href="../ABOUTUS/aboutus.html">About Us</a>
         </nav>
 
@@ -71,7 +71,7 @@
         </div>
 
         <div class="girl-image">
-            <img src="	https://assets.onecompiler.app/42y68y97m/43dbu2m9s/Adobe%20Express%20-%20file%20(4).png" alt="Customer Support">
+            <img src="contactvsimg.png" alt="Customer Support">
         </div>
 
  
@@ -92,7 +92,7 @@
      
     <div class="footer">
         <div class="logo">
-            <img src="https://assets.onecompiler.app/42y68y97m/433zxpj73/WhatsApp%20Image%202024-12-25%20at%2012.45.50%20AM.jpeg"
+            <img src="../vspazelogo.png"
                 alt="Logo" class="logo-img">
             <span class="company-name">VSPAZE TECHNOLOGIES</span>
         </div>
