--- a/public/GETSTARTED/start.html
+++ b/public/GETSTARTED/start.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="illustration">
-            <img src="https://assets.onecompiler.app/42y68y97m/43dh2tquz/WhatsApp%20Image%202025-04-01%20at%201.15.49%20PM.jpeg" alt="Illustration">
+            <img src="startimg1.jpeg" alt="Illustration">
         </div>
         <div class="form-container">
             <h2>Application Form</h2>
@@ -27,7 +27,7 @@
         </div>
         <div class="popup-overlay" id="popup-overlay">
             <div class="popup">
-                <img src="https://assets.onecompiler.app/42y68y97m/43a86mbvc/submit_success.png" alt="Success">
+                <img src="../APPLYFORM/successimg.png" alt="Success">
                 <p> Your submission was received :)</p>
                 <span>Thanks for the message</span>
                 <a href="../index.html" onclick="hidePopup()">Back To Home</a>
