--- a/public/index.html
+++ b/public/index.html
@@ -2201,6 +2201,7 @@ header nav a.active::after {
 
 
 
+  
   <div class="container-flex">
     <section class="main-section">
       <div class="left-panel">
@@ -2282,7 +2283,7 @@ header nav a.active::after {
   <!-- Banner Section with Image -->
   <div class="banner">
     <img
-      src="https://res.cloudinary.com/dagkvnqd9/image/upload/v1737966077/Untitled_design_20250127_133052_0000_pgsrqo.jpg"
+      src="creative.jpg"
       alt="Woman at desk">
     <div class="banner-2">
       <h2>It's Time to IMPLEMENT!</h2>
